# parser

./: Cargo.toml  Justfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: bincode.rs
examples/: linter.rs  parser.rs
examples/project/: Awaitable.ara  Sequence.ara  format.ara
src/: lib.rs
src/lexer/: byte_string.rs  issue.rs  iterator.rs  macros.rs  mod.rs  result.rs  token.rs
src/lexer/internal/: identifier.rs  mod.rs  number.rs  string.rs  variable.rs
src/lexer/state/: mod.rs  source_bytes.rs
src/parser/: issue.rs  macros.rs  mod.rs  result.rs
src/parser/internal/: identifier.rs  mod.rs  utils.rs  variable.rs
src/parser/state/: mod.rs
src/traverser/: mod.rs  visitor.rs
src/tree/: comment.rs  identifier.rs  mod.rs  token.rs  utils.rs  variable.rs
src/tree/definition/: attribute.rs  class.rs  constant.rs  enum.rs  function.rs  interface.rs  mod.rs  modifier.rs  namespace.rs  property.rs  template.rs  type.rs  use.rs
src/tree/expression/: argument.rs  array.rs  class.rs  construct.rs  control_flow.rs  function.rs  generic.rs  literal.rs  magic_constant.rs  mod.rs  operator.rs
src/tree/statement/: block.rs  control_flow.rs  expression.rs  loop.rs  mod.rs  return.rs  try.rs
tests/: bincode_test.rs  test.rs
tests/samples/0001/: code.ara  tree.txt
tests/samples/0002/: code.ara  tree.txt
tests/samples/0003/: code.ara  error.txt
tests/samples/0004/: code.ara  tree.txt
tests/samples/0005/: code.ara  tree.txt
tests/samples/0006/: code.ara  tree.txt
tests/samples/0007/: code.ara  tree.txt
tests/samples/0008/: code.ara  tree.txt
tests/samples/0009/: code.ara  tree.txt
tests/samples/0010/: code.ara  tree.txt
tests/samples/0011/: code.ara  tree.txt
tests/samples/0012/: code.ara  tree.txt
tests/samples/0013/: code.ara  tree.txt
tests/samples/0014/: code.ara  tree.txt
tests/samples/0015/: code.ara  tree.txt
(+232 files in other folders)
