[package]
name = "ara_parser"
description = "A fault-tolerant, recursive-descent parser for Ara Programming Language 🌲"
repository = "https://github.com/ara-lang/ara"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = { version = "1.3.0" }

[[bin]]
name = "ara-internal-snapshot"
path = "bin/snapshot.rs"

[dependencies]
ara_source = { version = "0.2.0" }
ara_reporting = { version = "0.5.0" }
schemars = { version = "0.8.11" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89" }

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = true
codegen-units = 1
rpath = true
